[project]
name = "hq"
version = "0.1.0"
description = "hq (heq-queue)"
readme = "README.md"
authors = [
    { name = "pfackeldey", email = "fackeldey.peter@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["requests", "cloudpickle"]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
